--- a/index.html
+++ b/index.html
@@ -241,13 +241,22 @@
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
         <li class="ms-3">
-          <a class="fab fa-twitter text-primary navbar-brand" href="#"></a>
+          <a
+            class="fab fa-twitter text-primary navbar-brand"
+            href="https://www.twitter.com/anjell_1202"
+          ></a>
         </li>
         <li class="ms-3">
-          <a class="fab fa-instagram text-danger navbar-brand" href="#"></a>
+          <a
+            class="fab fa-instagram text-danger navbar-brand"
+            href="https://www.instagram.com/a.n.jell_y/"
+          ></a>
         </li>
         <li class="ms-3">
-          <a class="fab fa-facebook text-primary navbar-brand" href=""></a>
+          <a
+            class="fab fa-facebook text-primary navbar-brand"
+            href="https://www.facebook.com/dirga.febriyanda/"
+          ></a>
         </li>
       </ul>
     </footer>
