--- a/index.html
+++ b/index.html
@@ -187,30 +187,63 @@
         </div>
         <div class="row justify-content-center mb-3">
           <div class="col-md-6">
-            <form>
+            <div
+              class="alert alert-success alert-dismissible fade show d-none my-alert"
+              role="alert"
+            >
+              <strong>Terimakasih!</strong> Pesan anda sudah kami terima.
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="alert"
+                aria-label="Close"
+              ></button>
+            </div>
+            <form name="kontak-form" action="" method="post">
               <div class="mb-3">
-                <label for="floatingInput">Nama Lengkap</label>
-                <input type="text" class="form-control" id="nama" />
+                <label for="nama">Nama Lengkap</label>
+                <input type="text" class="form-control" id="nama" name="nama" />
               </div>
               <div class="mb-3">
-                <label for="floatingInput">No Handphone</label>
-                <input type="text" class="form-control" id="nohp" />
+                <label for="nohp">No Handphone</label>
+                <input type="text" class="form-control" id="nohp" name="nohp" />
               </div>
               <div class="mb-3">
-                <label for="floatingInput">Email</label>
-                <input type="email" class="form-control" id="email" />
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  name="email"
+                />
               </div>
               <div class="mb-3">
-                <label for="floatingInput">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="5"></textarea>
+                <label for="pesan">Pesan</label>
+                <textarea
+                  class="form-control"
+                  id="pesan"
+                  rows="5"
+                  name="pesan"
+                ></textarea>
               </div>
               <button
-                class="w-100 btn btn-lg btn-dark fa fa-share"
-                type="button"
+                type="submit"
+                class="w-100 btn btn-lg btn-dark btn-kirim"
                 id="kirim"
-                onclick="Swal.fire('Sukses', 'Pesan terkirim', 'success')"
               >
                 Kirim
+              </button>
+              <button
+                class="w-100 btn btn-primary btn-loading d-none"
+                type="button"
+                disabled
+              >
+                <span
+                  class="spinner-border spinner-border-sm"
+                  role="status"
+                  aria-hidden="true"
+                ></span>
+                Loading...
               </button>
             </form>
           </div>
@@ -268,5 +301,33 @@
       crossorigin="anonymous"
     ></script>
     <script src="sweetalert/sweetalert2.all.min.js"></script>
+    <script>
+      const scriptURL =
+        "https://script.google.com/macros/s/AKfycbxtMrIS1HaD2Q6hjR7REE7L2Wr_fUTf3ND0enbQSreumS9wPf96839zx7fUPeYDHcDi/exec";
+      const form = document.forms["kontak-form"];
+      const btnKirim = document.querySelector(".btn-kirim");
+      const btnLoading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".my-alert");
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        // ketika tombol submit diklik
+        // tampilkan tombol loading hilangkan tombol kirim
+        btnLoading.classList.toggle("d-none");
+        btnKirim.classList.toggle("d-none");
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            // tampilkan tombol loading hilangkan tombol kirim
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
+            // tampilkan alert
+            myAlert.classList.toggle("d-none");
+            // reset formnya
+            form.reset();
+            console.log("Success!", response);
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
   </body>
 </html>
