--- a/index.html
+++ b/index.html
@@ -420,8 +420,8 @@
       });
       gsap.from(".jumbotron img", {
         duration: 1.5,
-        ease: "elastic.out(1, 0.3)",
-        y: 500,
+        rotateY: 360,
+        opcity: 0,
       });
     </script>
     <script>
