--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top"
     >
       <div class="container">
-        <a class="fa fa-paw fa-2x navbar-brand" href="#beranda">
+        <a class="fa fa-paw navbar-brand" href="#beranda">
           A.N.JELL<sup>TM</sup></a
         >
         <button
