--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body id="beranda">
     <!-- Navbar -->
     <nav
-      class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top"
+      class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top"
     >
       <div class="container">
         <a class="fa fa-paw navbar-brand" href="#beranda">
@@ -262,6 +262,13 @@
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#e2edff"
+          fill-opacity="1"
+          d="M0,128L21.8,138.7C43.6,149,87,171,131,186.7C174.5,203,218,213,262,218.7C305.5,224,349,224,393,192C436.4,160,480,96,524,74.7C567.3,53,611,75,655,101.3C698.2,128,742,160,785,149.3C829.1,139,873,85,916,85.3C960,85,1004,139,1047,165.3C1090.9,192,1135,192,1178,186.7C1221.8,181,1265,171,1309,160C1352.7,149,1396,139,1418,133.3L1440,128L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- Akhir Galeri -->
 
@@ -316,13 +323,13 @@
               </div>
               <button
                 type="submit"
-                class="w-100 btn btn-lg btn-dark btn-kirim"
+                class="btn btn-lg btn-primary btn-kirim"
                 id="kirim"
               >
                 Kirim
               </button>
               <button
-                class="w-100 btn btn-primary btn-loading d-none"
+                class="btn btn-primary btn-loading d-none"
                 type="button"
                 disabled
               >
@@ -339,7 +346,7 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#212529"
+          fill="#0d6efd"
           fill-opacity="1"
           d="M0,128L21.8,149.3C43.6,171,87,213,131,218.7C174.5,224,218,192,262,186.7C305.5,181,349,203,393,229.3C436.4,256,480,288,524,293.3C567.3,299,611,277,655,250.7C698.2,224,742,192,785,192C829.1,192,873,224,916,208C960,192,1004,128,1047,138.7C1090.9,149,1135,235,1178,272C1221.8,309,1265,299,1309,266.7C1352.7,235,1396,181,1418,154.7L1440,128L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"
         ></path>
@@ -349,7 +356,7 @@
 
     <!-- footer -->
     <footer
-      class="d-flex flex-wrap justify-content-center align-items-center py-3 bg-dark"
+      class="d-flex flex-wrap justify-content-center align-items-center py-3 bg-primary"
     >
       <div class="col-md-4 d-flex align-items-center">
         <a
