--- a/index.html
+++ b/index.html
@@ -430,7 +430,12 @@
         rotateY: 360,
         opcity: 0,
       });
-      gsap.from(".navbar",{duration: 1.5, y:-100%, opcity: 0, ease: 'bounce' });
+      gsap.from(".navbar", {
+        duration: 1.5,
+        y: -100,
+        opcity: 0,
+        ease: "bounce",
+      });
     </script>
     <script>
       const scriptURL =
