--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body id="beranda">
     <!-- Navbar -->
     <nav
-      class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top"
+      class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary shadow-sm"
     >
       <div class="container">
         <a class="fa fa-paw navbar-brand" data-tilt href="#beranda">
