--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
   </head>
   <body id="beranda">
     <!-- Navbar -->
-    <nav
-      class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary shadow-sm"
-    >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
       <div class="container">
         <a class="fa fa-paw navbar-brand" data-tilt href="#beranda">
           A.N.JELL<sup>TM</sup></a
