--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   </head>
   <body id="beranda">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+    <nav
+      class="navbar static-top navbar-expand-lg navbar-dark bg-primary shadow-sm"
+    >
       <div class="container">
         <a class="fa fa-paw navbar-brand" data-tilt href="#beranda">
           A.N.JELL<sup>TM</sup></a
@@ -436,7 +438,7 @@
         text: "Writer | Programer | Graphic Design",
       });
       gsap.from(".jumbotron img", {
-        duration: 1.5,
+        duration: 2,
         rotateY: 360,
         opcity: 0,
       });
