--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary shadow-sm"
     >
       <div class="container">
-        <a class="fa fa-paw navbar-brand" data-tilt href="#beranda">
+        <a class="fa fa-paw navbar-brand" href="#beranda">
           A.N.JELL<sup>TM</sup></a
         >
         <button
@@ -44,7 +44,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item" data-tilt>
+            <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#beranda"
                 >Beranda</a
               >
@@ -72,7 +72,6 @@
         alt="Dirga Febriyanda"
         width="200"
         class="rounded-circle img-thumbnail"
-        data-tilt
       />
       <h1 class="display-4"></h1>
       <p class="lead"></p>
@@ -133,7 +132,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="zoom-in-down" data-tilt>
+            <div class="card" data-aos="zoom-in-down">
               <img
                 src="img/project/writer.jpg"
                 class="card-img-top"
@@ -145,12 +144,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div
-              class="card"
-              data-aos="zoom-in-down"
-              data-tilt
-              data-aos-delay="100"
-            >
+            <div class="card" data-aos="zoom-in-down" data-aos-delay="100">
               <img
                 src="img/project/programer.jpg"
                 class="card-img-top"
@@ -162,12 +156,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div
-              class="card"
-              data-aos="zoom-in-down"
-              data-tilt
-              data-aos-delay="200"
-            >
+            <div class="card">
               <img
                 src="img/project/design.jpg"
                 class="card-img-top"
@@ -199,7 +188,7 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-3" data-tilt>
+          <div class="col-md-3">
             <a href="#">
               <img
                 src="img/gambar/1.jpg"
@@ -208,7 +197,7 @@
               />
             </a>
           </div>
-          <div class="col-md-3" data-tilt>
+          <div class="col-md-3">
             <a href="#">
               <img
                 src="img/gambar/2.jpg"
@@ -217,7 +206,7 @@
               />
             </a>
           </div>
-          <div class="col-md-3" data-tilt>
+          <div class="col-md-3">
             <a href="#">
               <img
                 src="img/gambar/3.jpg"
@@ -226,7 +215,7 @@
               />
             </a>
           </div>
-          <div class="col-md-3" data-tilt>
+          <div class="col-md-3">
             <a href="#">
               <img
                 src="img/gambar/4.jpg"
@@ -235,7 +224,7 @@
               />
             </a>
           </div>
-          <div class="col-md-3" data-tilt>
+          <div class="col-md-3">
             <a href="#">
               <img
                 src="img/gambar/5.jpg"
@@ -244,7 +233,7 @@
               />
             </a>
           </div>
-          <div class="col-md-3" data-tilt>
+          <div class="col-md-3">
             <a href="#">
               <img
                 src="img/gambar/6.jpg"
@@ -253,7 +242,7 @@
               />
             </a>
           </div>
-          <div class="col-md-3" data-tilt>
+          <div class="col-md-3">
             <a href="#">
               <img
                 src="img/gambar/7.jpg"
@@ -262,7 +251,7 @@
               />
             </a>
           </div>
-          <div class="col-md-3" data-tilt>
+          <div class="col-md-3">
             <a href="#">
               <img
                 src="img/gambar/8.jpg"
@@ -375,7 +364,7 @@
           class="mb-3 me-2 mb-md-0 text-white text-decoration-none lh-1"
         >
         </a>
-        <span class="text-light fa fa-paw"> &copy; 2022 Company, Inc</span>
+        <span class="text-light fa fa-paw"> &copy; 2022 A.N.JELLc</span>
       </div>
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
@@ -406,22 +395,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script src="sweetalert/sweetalert2.all.min.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      const galeriImage = document.querySelectorAll(".galeri-img");
-
-      galeriImage.forEach((img, i) => {
-        img.dataset.aos = "fade-down";
-        img.dataset.aosDelay = i * 100;
-        img.dataset.aosDuration = 1000;
-      });
-
-      AOS.init({
-        once: true,
-        duration: 2000,
-      });
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/TextPlugin.min.js"></script>
     <script type="text/javascript" src="js/vanilla-tilt.js"></script>
