--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="zoom-in-down">
+            <div class="card">
               <img
                 src="img/project/writer.jpg"
                 class="card-img-top"
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="zoom-in-down" data-aos-delay="100">
+            <div class="card">
               <img
                 src="img/project/programer.jpg"
                 class="card-img-top"
