--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4" data-aos="fade-right">
+          <div class="col-md-4">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
               error, dignissimos reprehenderit voluptas recusandae suscipit,
@@ -102,7 +102,7 @@
               Similique?
             </p>
           </div>
-          <div class="col-md-4" data-aos="fade-left">
+          <div class="col-md-4">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Distinctio iusto sapiente porro ab, rerum modi illo ut eaque
