--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     >
       <a
         class="fab fa-whatsapp text-light fa-2x text-center none"
-        href="https://wa.link/uit7pb"
+        href="https://wa.link/tnjm88"
       ></a>
     </button>
     <!-- Akhir tombol bawah kembali ke atas whatsapp -->
@@ -450,7 +450,7 @@
       gsap.to(".lead", {
         duration: 2,
         delay: 2,
-        text: "Writer | Programer | Graphic Design",
+        text: "Copywriter | Programer | Graphic Design",
       });
       gsap.from(".jumbotron img", {
         duration: 2,
